# MiniFlashDB

./: .gitignore  CMakeLists.txt  README.md
config/: mf_config_template.h
example/linux/: CMakeLists.txt  main.c  mf_config.h
src/: mf.c  mf.h
